--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>MARPU Foundation - Change Within To Change The World</title>
-    <meta name="description" content="MARPU Foundation focuses on sustainable development goals, volunteering, and creative solutions to create positive change in communities." />
+    <title>GUS Foundation - Change Within To Change The World</title>
+    <meta name="description" content="GUS Foundation focuses on sustainable development goals, volunteering, and creative solutions to create positive change in communities." />
   </head>
   <body>
     <div id="root"></div>
